@@ -1,5 +1,7 @@
 #VERSION 0.8.3#
 
+ - deleted deprecated class Peak_Utils
+
  - fixed methods __construct() and __call() of Peak_Core to use getEnv() instead of deprecated constant DEV_MODE
 
  - fixed bug in Peak_Helpers::__get() by changing include for include_once
